--- a/conf/distro/fptest.conf
+++ b/conf/distro/fptest.conf
@@ -7,12 +7,12 @@ DISTRO_VERSION = "1.0"
 DISTRO_CODENAME = "Baervan Wildwanderer"
 SDK_VENDOR = "-fptest-sdk"
 SDK_VERSION="${DISTRO_VERSION}"
-MAINTAINER = "info@fptest.com"
+MAINTAINER = "fpersson.se@gmail.com"
 
 TARGET_VENDOR = "-fptest"
 
 # Override these in poky based distros
-MYDISTRO_DEFAULT_DISTRO_FEATURES = "bluetooth ext2 usbgadget usbhost wifi systemd"
+MYDISTRO_DEFAULT_DISTRO_FEATURES = "ext2 wifi systemd"
 MYDISTRO_DEFAULT_EXTRA_RDEPENDS = "packagegroup-core-boot"
 MYDISTRO_DEFAULT_EXTRA_RRECOMMENDS = "kernel-module-af-packet"
 
@@ -22,11 +22,3 @@ DISTRO_EXTRA_RRECOMMENDS += " ${MYDISTO_DEFAULT_EXTRA_RRECOMMENDS}"
 DISTRO_FEATURES ?= "${MYDISTRO_DEFAULT_DISTRO_FEATURES} ${DISTRO_FEATURES_LIBC} "
 
 PACKAGE_CLASSES = "package_ipk"
-
-# Use systemd as init manager
-DISTRO_FEATURES_append = " systemd"
-DISTRO_FEATURES_BACKFILL_CONSIDERED += "sysvinit"
-VIRTUAL-RUNTIME_init_manager = "systemd"
-#VIRTUAL-RUNTIME_initscripts = "systemd-compat-units"
-#make system exlusive
-VIRTUAL-RUNTIME_initscripts = ""
